--- a/frontend/src/Message_screen.css
+++ b/frontend/src/Message_screen.css
@@ -7,9 +7,14 @@
 
 .message {
   margin: 5px;
-  padding: 10px;
+  padding-left: 7px;
+  padding-right: 7px;
+  padding-bottom: 11px;
+  height: 35px;
   border-radius: 10px;
   max-width: 80%;
+  background-color: transparent;
+  color: #000;
 }
 
 .sent {
@@ -20,4 +25,8 @@
 .received {
   align-self: flex-start;
   background-color: #f1f0f0; /* Received message styling */
+}
+
+.pcolor {
+  background-color: transparent;
 }
