--- a/frontend/src/Signup.css
+++ b/frontend/src/Signup.css
@@ -24,6 +24,7 @@ p {
   height: 10%;
   border-radius: 10px;
   padding-left: 20px;
+  margin-top: 8px;
 }
 .forms .user {
   width: 80%;
@@ -42,7 +43,7 @@ p {
 }
 .forms .signupbutton {
   width: 40%;
-  height: 15%;
+  height: 45px;
   margin-top: 30px;
   border-radius: 20px;
   background-color: #00416a;
