--- a/frontend/src/profile/Profile.css
+++ b/frontend/src/profile/Profile.css
@@ -1,3 +1,13 @@
+html,
+body{
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.img {
+  margin: 0;
+}
 .profile-page {
   display: flex;
   align-items: center;
@@ -34,6 +44,15 @@
   font-size: 1.2rem;
   color: #555;
   margin: 8px 0;
+}
+
+.upperpart {
+  /* display: flex; */
+  align-items: center;
+  justify-content: space-between;
+  background-color: #003b71;
+  color: white;
+  /* padding: 10px; */
 }
 
 .profile-content-box button {
